# fanorona_net

./: .gitignore  Cargo.toml  README.md  datasets.txt  fanorona.tex
.cargo/: Config.toml
dataset/tictactoe/: all.txt
datasets/: balanced_tests.txt  dataset_depth6.txt  dataset_depth7.txt  training_depth7.txt  trainings.txt
datasets/depth6/: mean_1hot.txt  medium_1hot.txt  min_1hot.txt
datasets/depth7/: balanced_training.txt  bl_tr.txt  min_bl.txt  minimum.txt  training.txt
datasets/indexed/: test.txt  test1.txt  train.txt  train1.txt  training.txt  unindexed.txt
datasets/newest/: test.txt  training.txt  validation.txt
new_models/: ver.sh
src/: api.rs  data.rs  dataset.rs  dataset_gen.rs  fanorona3.rs  game.rs  games.rs  lib.rs  main.rs  maths.rs  neural.rs  nn.rs  testing.rs  tictactoe.rs  utils.rs  wasm.rs
src/data/: datasets.rs  loads.rs  restructured_datasets.rs
src/games/: definition.rs  fanorona.rs  fanorontelo.rs  minmax.rs
src/maths/: activations.rs  collectors.rs
src/maths/activations/: relu.rs  sigmoid.rs  softmax.rs
src/maths/collectors/: mat.rs  plmatrix.rs  vec.rs
src/nn/: init.rs  learn.rs  prediction.rs
src/testing/: predict.rs  train.rs
src/utils/: datasets.rs  game.rs  inits.rs  loads.rs  matrixes.rs  vectors.rs
