[package]
name = "fanorona_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.0.8"
itertools = "0.14"
rand = "0.8"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }

[[bin]]
name = "api"
path = "src/api.rs"

[[bin]]
name = "main"
path = "src/main.rs"
