[package]
name = "fanorona_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.0.8"
itertools = "0.14"
rand = "0.8"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[lib]
name = "fanorona"
crate-type = ["cdylib"]   # <= Important pour produire .so / .dll / .dylib
